@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<gui version="608" name="digikam" translationDomain="digikam" >
+<gui version="609" name="digikam" translationDomain="digikam" >
 
  <MenuBar>
 
@@ -156,6 +156,7 @@
       <Action name="export_googlephoto" />
       <Action name="export_imageshack" />
       <Action name="export_imgur" />
+      <Action name="export_ipfs" />
       <Action name="export_onedrive" />
       <Action name="export_pinterest" />
       <Action name="export_box" />
